--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
   ![](map-logo-col.png){width=300px style="display: block; margin:0 auto;"}  
-  Introduction to Spatial Analysis for Infectious Diseases
+  Introduction to coding and version control:R, unix, git, QGIS
 output:
   html_document:
     toc: true
@@ -16,15 +16,7 @@ header-includes:
 
 ----
 
-Welcome to the Introduction of Spatial Analysis for Infectious diseases tutorial pages. In this part of the workshop we aim to teach basic concepts, skills and tools for working with data so that you can get more done in less time, and with less pain. The lessons here focus mainly on the use of R and QGIS.
-
-The main sections of this workshop are designed to be introductory for participants with little to no programming experience. The advanced section taught in R for Geostatistical Modelling using `R-INLA` requires participants to have some statistical knowledge, some understanding of Bayesian statistics and some prior knowledge of spatial data.
-
-----
-
-**Goal of this tutorial:**
-
-We want to provide our audience with a few useful tools for their day-to-day data activities. Given the restricted time of ASTMH, we may not be able to cover all important aspects of data handling. But the team are excited to release future workshops more tailored to regional/country requests. Please get in touch with us at on our [GoogleGroup](https://groups.google.com/g/malaria-atlas-project-introduction-to-spatial-analysis)
+Welcome to the Introduction of coding and version control:R, unix, git, QGIS course for MAMOD. In this part of the workshop we aim to teach basic concepts, skills and tools for working with data so that you can get more done in less time, and with less pain. The lessons here focus mainly on the use of R, but we will have an additional week of introduction to unix/shell, version control using git and deadling with spatial data using QGIS.
 
 ----
 
@@ -32,11 +24,17 @@ We want to provide our audience with a few useful tools for their day-to-day dat
 
 ## Preparations
 
-This workshops is expected to be hands-on, and to follow this lessons participants must have R, RStudio and QGIS installed on their computers. You also need to be able to install a number of R packages, create directories and download files.
+This workshops is expected to be hands-on, and to follow this lessons participants must have Git, R, RStudio and QGIS installed on their computers. You also need to be able to install a number of R packages, create directories and download files.
 
-To avoid troubleshooting during the lesson, participants should follow the instructions below to download and install everything beforehand. If you are using your own computers this should be no problem,  but if the computer is managed by your organization's IT department you might need help from an IT administrator. 
+To avoid troubleshooting during the lesson, participants should follow the instructions from [Carpentries](https://carpentries.github.io/workshop-template/install_instructions/) to download and install everything beforehand. If you are using your own computers this should be no problem,  but if the computer is managed by your organization's IT department you might need help from an IT administrator. 
 
-<br>
+Follow the instructions for:
+- Git
+- Shell
+- R and Rstudio
+
+Addititionally we include the instructions for QGIS:
+
 
 ###  Installing QGIS
 
@@ -49,61 +47,6 @@ Follow the [QGIS](https://www.qgis.org/en/site/forusers/download.html) download 
 
 <br>
 
-### Install R and RStudio
-
-R and RStudio are two separate pieces of software: 
-
-* **R** is a programming language that is especially powerful for data 
-  exploration, visualization, and statistical analysis
-* **RStudio** is an integrated development environment (IDE) that makes using 
-  R easier. In this course we use RStudio to interact with R. 
-  
-If you don't already have R and RStudio installed, follow the instructions for 
-your operating system below. You have to install R before you install RStudio. 
-
-#### Windows
-
-* Download R from the 
-  [CRAN website](https://cran.r-project.org/bin/windows/base/release.htm).
-* Run the `.exe` file that was just downloaded
-* Go to the [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
-* Under *All Installers*, download the RStudio Installer for Windows.
-* Double click the file to install it
-* Once it's installed, open RStudio to make sure it works and you don't get any
-  error messages.
-
-#### MacOS
-
-* Download R from
-  the [CRAN website](https://cran.r-project.org/bin/macosx/).
-* Select the `.pkg` file for the latest R version
-* Double click on the downloaded file to install R
-* It is also a good idea to install [XQuartz](https://www.xquartz.org/) (needed
-  by some packages)
-* Go to the [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
-* Under *All Installers*, download the RStudio Installer for MacOS.
-* Double click the file to install RStudio
-* Once it's installed, open RStudio to make sure it works and you don't get any
-  error messages.
-
-#### Linux
-
-* Follow the instructions for your distribution
-  from [CRAN](https://cloud.r-project.org/bin/linux), they provide information
-  to get the most recent version of R for common distributions. For most
-  distributions, you could use your package manager (e.g., for Debian/Ubuntu run
-  `sudo apt-get install r-base`, and for Fedora `sudo yum install R`), but we
-  don't recommend this approach as the versions provided by this are
-  usually out of date. In any case, make sure you have at least R 3.3.1.
-* Go to the
-  [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
-* Under *All Installers*, select the version that matches your distribution and
-  install it with your preferred method (e.g., with Debian/Ubuntu `sudo dpkg -i
-  rstudio-YYYY.MM.X-ZZZ-amd64.deb` at the terminal).
-* Once it's installed, open RStudio to make sure it works and you don't get any
-  error messages.
-
-<br>
 
 ### Update R and RStudio
 
